add CompositeType and modify MappingType